--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -14971,7 +14971,7 @@ a.view:hover {
 }
 
 .w3l-main-slider .banner-view {
-  background: url(../images/banner1.jpg) no-repeat center;
+  background: url(../images/bannar1.jpg) no-repeat center;
   background-size: cover;
   min-height:100vh;
   position: relative;
@@ -14982,19 +14982,19 @@ a.view:hover {
 }
 
 .w3l-main-slider .banner-top1 {
-  background: url(../images/banner2.jpg) no-repeat center;
+  background: url(../images/bannar2.jpg) no-repeat center;
   background-size: cover;
   min-height:100vh;
 }
 
 .w3l-main-slider .banner-top2 {
-  background: url(../images/banner3.jpg) no-repeat center;
+  background: url(../images/bannar3.jpg) no-repeat center;
   background-size: cover;
   min-height:100vh;
 }
 
 .w3l-main-slider .banner-top3 {
-  background: url(../images/banner4.jpg) no-repeat center;
+  background: url(../images/bannar4.jpg) no-repeat center;
   background-size: cover;
   min-height:100vh;
 }
