--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 /*--
-Author: W3layouts
-Author URL: http://w3layouts.com
+Author: Sirge Technoprice
+Author URL: http://Sirgetechnoprice.com
 --*/
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
@@ -14971,7 +14971,7 @@ a.view:hover {
 }
 
 .w3l-main-slider .banner-view {
-  background: url(../images/bannar1.jpg) no-repeat center;
+  background: url(../images/bannar5.jpg) no-repeat center;
   background-size: cover;
   min-height:100vh;
   position: relative;
