--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -14971,7 +14971,7 @@ a.view:hover {
 }
 
 .w3l-main-slider .banner-view {
-  background: url(../images/bannar5.jpg) no-repeat center;
+  background: url(../images/bannar1.jpg) no-repeat center;
   background-size: cover;
   min-height:100vh;
   position: relative;
@@ -16388,7 +16388,7 @@ a.read span {
 /*--/breadcrumb--*/
 .w3l-about-breadcrumb {
   margin-top: 90px;
-  background: url(../images/banner4.jpg) no-repeat center;
+  background: url(../images/bannar5.jpg) no-repeat center;
   background-size: cover;
   position: relative;
   z-index: 0;
@@ -16470,7 +16470,7 @@ ul.breadcrumbs-custom-path li a {
 /*-- /ab-stats--*/
 /* stats */
 .w3l-statshny {
-  background: url(../images/banner3.jpg) no-repeat center;
+  background: url(../images/abt3.jpg) no-repeat center;
   background-size: cover;
   position: relative;
   z-index: 1;
